<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signIn.SignInActivity"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="12dp">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_patient" />

    <TextView
        android:id="@+id/textView_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView_icon"
        android:text="@string/welcome_back"
        android:fontFamily="@font/roboto"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView_sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_welcome_back"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_sign_in_to_continue"
        android:layout_marginTop="64dp">

        <EditText
            android:id="@+id/textInputEditText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/email"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:text="tahmid@abc.com"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout_email">

        <EditText
            android:id="@+id/textInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/password"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:text="welcome" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textInputLayout_password"
        android:text="@string/forgot_password"/>

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_forgot_password"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/login"
        android:textColor="@color/white"
        android:focusable="true"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:id="@+id/linearLayout_new_user_and_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_log_in"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/new_user" />

        <TextView
            android:id="@+id/textView_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


</RelativeLayout>