<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.personalInformation.PersonalInformationActivity"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="16dp">
    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_android_24dp" />

    <TextView
        android:id="@+id/textView_personal_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView_icon"
        android:text="@string/personal_information"
        android:fontFamily="@font/roboto_bold"
        android:textSize="30sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView_to_know_you_better"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/to_know_you_better_please_fill_this"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_personal_information"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView_date_of_birth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/date_of_birth"
        android:layout_below="@+id/textView_to_know_you_better"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        />


    <android.support.v7.widget.CardView
        android:id="@+id/cardView_date_of_birth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_below="@+id/textView_date_of_birth_text"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/textView_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_calendar"
            android:text="Date"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Height"
        android:layout_below="@+id/cardView_date_of_birth"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"/>
    <LinearLayout
        android:id="@+id/linearLayout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView_height"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/editText_feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="5"
            android:gravity="center"
            android:inputType="number"
            android:focusable="true"
            android:imeOptions="actionNext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FEET"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editText_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="8"
            android:gravity="center"
            android:inputType="number"
            android:focusable="true"
            android:imeOptions="actionNext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INCHE"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textView_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight"
        android:layout_below="@+id/linearLayout_height"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"/>
    <LinearLayout
        android:id="@+id/linearLayout_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView_weight"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/editText_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="8"
            android:gravity="center"
            android:inputType="number"
            android:focusable="true"
            android:imeOptions="actionDone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kg"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:layout_below="@+id/linearLayout_weight"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"/>
    <LinearLayout
        android:id="@+id/linearLayout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView_gender">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_man"/>

        <Switch
            android:id="@+id/switch_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_female_silhouette"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button_1"
        android:ems="16"
        android:text="Next"
        android:textColor="@color/white" />
</RelativeLayout>